<?xml version="1.0"?>
<package>
	<name>autopnp_tool_change</name>
	<version>0.1.0</version>
	<description>
		Software for automatic tool change.
	</description>
	<author>Olha Meyer</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
	<url>http://ros.org/wiki/autopnp_tool_change</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>libopencv-dev</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>roslib</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>control_msgs</build_depend>
	<build_depend>trajectory_msgs</build_depend>
	<build_depend>pr2_controllers_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>message_filters</build_depend>
	<build_depend>cob_object_detection_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>moveit_ros_move_group</build_depend>
	<build_depend>moveit_ros_planning_interface</build_depend>
	<build_depend>moveit_ros_manipulation</build_depend>
	<build_depend>joint_trajectory_action</build_depend>
	<build_depend>cob_phidgets</build_depend>
	<build_depend>cob_generic_states_experimental</build_depend>
	<build_depend>message_generation</build_depend>

	<build_depend>boost</build_depend>


	<run_depend>libopencv-dev</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>roslib</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>control_msgs</run_depend>
	<run_depend>trajectory_msgs</run_depend>
	<run_depend>pr2_controllers_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>message_filters</run_depend>
	<run_depend>cob_object_detection_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>moveit_ros_move_group</run_depend>
	<run_depend>moveit_ros_planning_interface</run_depend>
	<run_depend>moveit_ros_manipulation</run_depend>
	<run_depend>joint_trajectory_action</run_depend>
	<run_depend>cob_phidgets</run_depend>
	<run_depend>cob_generic_states_experimental</run_depend>
	<run_depend>message_runtime</run_depend>

	<run_depend>boost</run_depend>
</package>
