<?xml version="1.0"?>
<package>
	<name>cob_laser_scanner_filter</name>
	<version>0.1.0</version>
	<description>
		Laser scanner filter.
	</description>
	<author>Joshua Hampp</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
	<url>http://ros.org/wiki/cob_laser_scanner_filter</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cmake_modules</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
</package>
