<?xml version="1.0"?>
<package>
	<name>concorde_tsp_solver</name>
	<version>0.1.0</version>
	<description>Wrapper for the concorde_tsp_solver from http://www.math.uwaterloo.ca/tsp/concorde/downloads/downloads.htm</description>

	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>

	<license>see original software</license>

	<buildtool_depend>catkin</buildtool_depend>

</package>
