<?xml version="1.0"?>
<package format="2">
	<name>opengm_lib</name>
	<version>0.1.0</version>
	<description>
		This package wrappes the external c++ library opengm in a ros package, so other packages can use it. It downloads the source code of it and then unzips it. The library is a header-only library with command line interfaces, which aren't used in autopnp, so it doesn't gets build. For further descriptions and tutorials see the Makefile.tarball and https://github.com/opengm/opengm .
	</description>
	<author email="florian.jordan@ipa.fraunhofer.de">Florian Jordan</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/opengm_lib</url>

	<buildtool_depend>catkin</buildtool_depend>

</package>
